--- a/css/produits.css
+++ b/css/produits.css
@@ -43,6 +43,14 @@ body {
 /***************************************************************** NAVBARR ***********************************************************/
 /***************************************************************** NAVBARR ***********************************************************/
 /***************************************************************** NAVBARR ***********************************************************/
+.parallaxv {
+  background: url("../img/index/parallaxv.jpg") no-repeat;
+  height: 50px;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow: hidden;
+}
 
 /************************************************************** FOOTERRRR ********************************************************************/
 
@@ -80,3 +88,41 @@ body {
 }
 
 /************************************************************** FINFOOTERRRR ********************************************************************/
+.titre {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.card-img-top {
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+
+.card-img-top:hover {
+  transform: scale(1.02);
+}
+
+.btnachat {
+  background-color: #f70776;
+  border: none;
+}
+
+.btnachat:hover {
+  background-color: #ffffff;
+  color: #000000;
+  transition: 0.6s;
+}
+
+.container-produit {
+  color: #fff;
+}
+
+.vendeur {
+  color: #f70776;
+  text-decoration: none;
+}
+.vendeur:hover {
+  color: #ffffff;
+  font-weight: 600;
+}
