--- a/css/produits.css
+++ b/css/produits.css
@@ -51,43 +51,6 @@ body {
   background-size: cover;
   overflow: hidden;
 }
-
-/************************************************************** FOOTERRRR ********************************************************************/
-
-.rsxx {
-  font-size: 1.3rem;
-  color: #fff;
-  font-size: 2rem;
-}
-
-.rsxx:hover {
-  color: #f70776;
-  font-size: 2rem;
-}
-
-.infoo {
-  font-size: 1.3rem;
-  color: #fff;
-  text-decoration: none;
-}
-
-.infoo:hover {
-  color: #fff;
-  text-decoration: underline #f70776 3px;
-}
-
-.contactt {
-  font-size: 1.3rem;
-  color: #fff;
-  text-decoration: none;
-}
-
-.contactt:hover {
-  color: #fff;
-  text-decoration: underline #f70776 3px;
-}
-
-/************************************************************** FINFOOTERRRR ********************************************************************/
 .titre {
   font-size: 3rem;
   font-weight: bold;
@@ -126,3 +89,44 @@ body {
   color: #ffffff;
   font-weight: 600;
 }
+
+.textv {
+  padding: 200px;
+  text-align: center;
+}
+/************************************************************** FOOTERRRR ********************************************************************/
+
+.rsxx {
+  font-size: 1.3rem;
+  color: #fff;
+  font-size: 2rem;
+}
+
+.rsxx:hover {
+  color: #f70776;
+  font-size: 2rem;
+}
+
+.infoo {
+  font-size: 1.3rem;
+  color: #fff;
+  text-decoration: none;
+}
+
+.infoo:hover {
+  color: #fff;
+  text-decoration: underline #f70776 3px;
+}
+
+.contactt {
+  font-size: 1.3rem;
+  color: #fff;
+  text-decoration: none;
+}
+
+.contactt:hover {
+  color: #fff;
+  text-decoration: underline #f70776 3px;
+}
+
+/************************************************************** FINFOOTERRRR ********************************************************************/
