--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,20 @@ body {
   color: #ffffff;
   background-color: #f70777;
 }
+
+.connexionbtn {
+  background-color: #f70776;
+  color: #fff;
+  font-weight: 600;
+  font-size: 15px;
+  white-space: nowrap;
+  text-align: center;
+}
+.connexionbtn:hover {
+  background-color: #ffffff;
+  color: #f70776;
+  transition: 0.5s;
+}
 /***************************************************************** NAVBARR ***********************************************************/
 /***************************************************************** NAVBARR ***********************************************************/
 /***************************************************************** NAVBARR ***********************************************************/
