--- a/css/produits.css
+++ b/css/produits.css
@@ -91,9 +91,16 @@ body {
 }
 
 .textv {
-  padding: 200px;
+  padding-left: 200px;
+  padding-right: 200px;
+  padding-top: 50px;
   text-align: center;
 }
+
+.stars {
+  color: #f70776;
+}
+
 /************************************************************** FOOTERRRR ********************************************************************/
 
 .rsxx {
