--- a/css/produits.css
+++ b/css/produits.css
@@ -27,6 +27,7 @@ body {
 }
 
 .icnsmenu {
+  padding: 10px;
   color: #000000;
   font-size: 20px;
 }
@@ -40,9 +41,25 @@ body {
   color: #ffffff;
   background-color: #f70777;
 }
+
+.connexionbtn {
+  background-color: #f70776;
+  color: #fff;
+  font-weight: 600;
+  font-size: 15px;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.connexionbtn:hover {
+  background-color: #ffffff;
+  color: #f70776;
+  transition: 0.5s;
+}
 /***************************************************************** NAVBARR ***********************************************************/
 /***************************************************************** NAVBARR ***********************************************************/
 /***************************************************************** NAVBARR ***********************************************************/
+
 .parallaxv {
   background: url("../img/index/parallaxv.jpg") no-repeat;
   height: 50px;
