--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,17 @@ p {
   color: #f70776;
 }
 
+.emailenter50 {
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+@media (max-width: 708px) {
+  .emailenter50 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 /************************************************************** FOOTERRRR ********************************************************************/
 
 .footer-link {
