--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bokor&display=swap");
 
-body {
+body, html {
   margin: 0;
   padding: 0;
   background-color: #1c1c1c;
@@ -66,7 +66,7 @@ h1{
   font-size: 50px;
 }
 
-/* Section des filtres */
+/************************************************************ Section des filtres ****************************************************/
 
 .filter-section {
   background-color: #ffffffc8; /* Blanc transparent */
@@ -139,7 +139,7 @@ h1{
   color: #333333!important;
 }
 
-/***************************************** Cartes des produits ***************************************************/
+/************************************************************ Cartes des produits *******************************************************/
 .product-card {
   background-color: rgba(255, 255, 255, 0.8); /* Fond blanc transparent */
   border: 1px solid #f70776; /* Bordure rose autour de la carte */
@@ -170,7 +170,7 @@ h1{
 .product-card-title {
   color: #f70776; /* Titre rose */
   margin-top: 15px;
-  font-size: 1.2rem;
+  font-size: 25px;
   font-weight: bold;
   height: 2.5rem; /* Assurez une hauteur fixe */
   overflow: hidden;
