--- a/css/inscription.css
+++ b/css/inscription.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bokor&display=swap");
 
-body {
+body, html {
   margin: 0;
   padding: 0;
   background-color: #1c1c1c;
   font-family: "Barlow Condensed", sans-serif;
 }
 
-/* Styles du formulaire */
+/********************************************************** Styles du formulaire *****************************************************************/
 .card {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
